--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -9,7 +9,7 @@
 		<version>1.0.0</version>
 	</parent>
 	<artifactId>fusion-tool-dpu</artifactId>
-	<version>0.2.1</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<description>Data fusion tool ODCS-FusionTool implemented as ODCleanStore DPU.</description>
 
