--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -11,15 +11,14 @@
 	<artifactId>fusion-tool-dpu</artifactId>
 	<version>0.3.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<description>Data fusion tool ODCS-FusionTool implemented as ODCleanStore DPU.</description>
+	<description>Linked Data fusion tool LD-FusionTool implemented as a UnifiedViews DPU.</description>
 
 	<properties>
-		<dpu.description>Data fusion tool ODCS-FusionTool implemented as
-			ODCleanStore DPU.</dpu.description>
+		<dpu.description>Linked Data fusion tool LD-FusionTool implemented as a UnifiedViews DPU.</dpu.description>
 		<dpu.package>cz.cuni.mff.xrg.odcs.dpu.fusiontool</dpu.package>
 		<dpu.mainClass>FusionToolDpu</dpu.mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<odcs-cr-version>1.1-SNAPSHOT</odcs-cr-version>
+		<odcs-cr-version>1.1.5</odcs-cr-version>
 	</properties>
 
 	<repositories>
@@ -56,7 +55,15 @@
 		</dependency>
 	</dependencies>
 
-	<build>
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.felix</groupId>
