--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<dpu.description>Linked Data fusion tool LD-FusionTool implemented as a UnifiedViews DPU.</dpu.description>
-		<dpu.package>cz.cuni.mff.xrg.odcs.dpu.fusiontool</dpu.package>
+		<dpu.package>eu.unifiedviews.plugins.transformer.fusiontool</dpu.package>
 		<dpu.mainClass>FusionToolDpu</dpu.mainClass>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<odcs-cr-version>1.1.5</odcs-cr-version>
