--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -116,6 +116,12 @@
             <version>${sesame-version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-query</artifactId>
+            <version>${sesame-version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Other -->
         <dependency>
@@ -128,7 +134,41 @@
             <artifactId>mapdb</artifactId>
             <version>0.9.3</version>
         </dependency>
+
+        <!-- Test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-library</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-sail</artifactId>
+            <version>${sesame-version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-sail-memory</artifactId>
+            <version>${sesame-version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
+
 
     <licenses>
         <license>
