--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -19,6 +19,7 @@
         <project.java.version>1.7</project.java.version>
 
         <odcs-cr-version>1.1.5</odcs-cr-version>
+        <odcsft-version>1.1-SNAPSHOT</odcsft-version>
         <sesame-version>2.7.11</sesame-version>
         <uv-version>1.0.0</uv-version>
     </properties>
@@ -35,7 +36,6 @@
     </repositories>
 
     <dependencies>
-
         <!-- UnifiedViews dependencies -->
         <dependency>
             <groupId>eu.unifiedviews</groupId>
@@ -77,6 +77,14 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- LD-FusionTool dependencies -->
+        <!-- TODO: repository -->
+        <dependency>
+            <groupId>cz.cuni.mff.odcleanstore.fusiontool</groupId>
+            <artifactId>odcsft-application</artifactId>
+            <version>${odcsft-version}</version>
         </dependency>
 
         <!-- Old ODCleanStore dependencies -->
