--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -98,11 +98,24 @@
             <groupId>cz.cuni.mff.odcleanstore</groupId>
             <artifactId>odcs-conflictresolution</artifactId>
             <version>${odcs-cr-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
         <dependency>
             <groupId>cz.cuni.mff.odcleanstore</groupId>
             <artifactId>odcs-core</artifactId>
             <version>${odcs-cr-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Sesame -->
