--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -21,7 +21,7 @@
         <odcs-cr.version>1.1.5</odcs-cr.version>
         <odcsft.version>1.1-SNAPSHOT</odcsft.version>
         <sesame.version>2.7.11</sesame.version>
-        <uv-devenv.version>1.0.0</uv-devenv.version>
+        <uv-devenv.version>1.0.1</uv-devenv.version>
 
         <!-- define used vaadin version !!! do not forget to update the version for OSGI's package export -->
 		<vaadin.version>7.1.8</vaadin.version>
@@ -233,7 +233,7 @@
                     <excludeDependencies>
                         *;groupId=eu.unifiedviews
                         ,*;groupId=com.vaadin
-                        ,*;groupId=org.openrdf.sesame
+                        <!--,*;groupId=org.openrdf.sesame-->
                         ,org.slf4j
                         
                         <!-- add any new application provided library here ... -->
@@ -250,7 +250,7 @@
                         <Export-Package>${dpu.package};version="${project.version}"</Export-Package>
                         <Import-Package>
                             eu.unifiedviews.*;version="${uv-devenv.version}",com.vaadin.*;version="[${vaadin.version.min},
-                            ${vaadin.version.max})",*
+                            ${vaadin.version.max})",!org.apache.*,!sun.*,!virtuoso.*,*
                         </Import-Package>
                         <!-- dependencies embedding -->
                         <Embed-Dependency>*;scope=compile|system</Embed-Dependency>
