--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -135,6 +135,13 @@
 
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-query</artifactId>
+            <version>${sesame.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-rio-nquads</artifactId>
             <version>${sesame.version}</version>
         </dependency>
