--- a/sources/pom.xml
+++ b/sources/pom.xml
@@ -18,8 +18,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.java.version>1.7</project.java.version>
 
-        <odcs-cr.version>1.1.5</odcs-cr.version>
-        <odcsft.version>1.1.1-SNAPSHOT</odcsft.version>
+        <odcs-cr.version>1.1.6</odcs-cr.version>
+        <odcsft.version>1.1.2</odcsft.version>
         <sesame.version>2.7.13</sesame.version>
         <uv-devenv.version>1.0.1</uv-devenv.version>
 
